--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Index - SoftLand Bootstrap Template</title>
+  <title>FaaBeh</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/favicon_faabeh.jpg" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Fonts -->
@@ -44,16 +44,18 @@
       <a href="index.html" class="logo d-flex align-items-center">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <h1 class="sitename">SoftLand</h1>
+        <h1 class="sitename">Faabeh</h1>
       </a>
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="#hero" class="active">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#features">Features</a></li>
-          <li><a href="#pricing">Pricing</a></li>
-          <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+          <li><a href="#hero" class="active">Accueil</a></li>
+          <li><a href="#about">Solution</a></li>
+          <li><a href="#features">Missions</a></li>
+          <li><a href="#pricing">Vision</a></li>
+          <li><a href="#pricing">A prpos de nous</a></li>
+
+          <!-- <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="#">Dropdown 1</a></li>
               <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
@@ -69,7 +71,7 @@
               <li><a href="#">Dropdown 3</a></li>
               <li><a href="#">Dropdown 4</a></li>
             </ul>
-          </li>
+          </li> -->
           <li><a href="#contact">Contact</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -86,12 +88,12 @@
       <div class="container">
         <div class="row gy-4">
           <div class="col-lg-4 order-lg-last hero-img" data-aos="zoom-out">
-            <img src="assets/img/phone_1.png" alt="Phone 1" class="phone-1">
-            <img src="assets/img/phone_2.png" alt="Phone 2" class="phone-2">
+            <img src="assets/img/app2.png" alt="Phone 1" class="phone-1">
+            <img src="assets/img/app1.png" alt="Phone 2" class="phone-2">
           </div>
           <div class="col-lg-8 d-flex flex-column justify-content-center align-items text-center text-md-start" data-aos="fade-up">
-            <h2>Promote Your App with SoftLand</h2>
-            <p>We are team of talented designers making websites with Bootstrap</p>
+            <h2>Faabeh</h2>
+            <h4>Réagir vite, Sauver plus</h4>
             <div class="d-flex mt-4 justify-content-center justify-content-md-start">
               <a href="#" class="download-btn"><i class="bi bi-google-play"></i> <span>Google Play</span></a>
               <a href="#" class="download-btn"><i class="bi bi-apple"></i> <span>App Store</span></a>
